--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav class="heder-nav">
                     <a class="logotype link" href="./index.html"><span class="logotype-web">Web</span>Studio</a>
                     <ul class="hedre-menu list">
-                        <li><a class="nav link" href="./index.html">Студія</a></li>
+                        <li><a class="nav link current" href="./index.html">Студія</a></li>
                         <li><a class="nav link" href="./portfolio.html">Портфоліо</a></li>
                         <li><a class="nav link" href="#">Контакти</a></li>
                     </ul>
