--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                     <a class="logotype link" href="./index.html"><span class="logotype-web">Web</span>Studio</a>
                     <ul class="hedre-menu list">
                         <li><a class="nav link" href="./index.html">Студія</a></li>
-                        <li><a class="nav link" href="./portfolio.html">Портфоліо</a></li>
+                        <li><a class="nav link current" href="./portfolio.html">Портфоліо</a></li>
                         <li><a class="nav link" href="#">Контакти</a></li>
                     </ul>
                 </nav>
